<resources>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="app_name" translatable="false">Ovikl</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyDuaJHPi-Ewmz33WVv6uvQBTLFgfAwtw9w</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="notification_title" translatable="false">Ovikl</string>
    <string name="channel_name" translatable="false">Ovikl</string>
    <string name="channel_description" translatable="false">Ovikl</string>
    <string name="notification_message">Ovikl is running</string>
    <string name="start">Start</string>
    <string name="cancel">Cancel</string>
    <string name="arrived">Arrived to client</string>
    <string name="finish">Finish</string>
    <string name="ok">ok</string>
    <string name="allow">Allow</string>
    <string name="enable_location">Please allow Ovikl to access this device location</string>
    <string name="enable_gps">Please open GPS </string>
    <string name="driver">Driver</string>
    <string name="client">Client</string>
    <string name="driver_rate">Driver rate</string>
    <string name="car_rate">Vehicle rate</string>
    <string name="total_distance">Total distance</string>
    <string name="total_time">Total time</string>
    <string name="car_type">vehicle type</string>
    <string name="driver_info">Driver info</string>
    <string name="car">Vehicle</string>
    <string name="trips_count">Trips count</string>
    <string name="claims">Claims</string>
    <string name="claim">Claim</string>
    <string name="create_date">Register from</string>
    <string name="total_trips">Total trips</string>
    <string name="hr">hr</string>
    <string name="km">km</string>
    <string name="minutes">minutes</string>
    <string name="car_color">Main color</string>
    <string name="cancel_count">Cancel</string>
    <string name="driver_reject">The driver reject the trip</string>
    <string name="driver_confirm">The driver confirm the trip</string>
    <string name="driver_cancel">The driver cancel the trip</string>
    <string name="client_cancel">The client cancel the trip</string>
    <string name="chat">Chat</string>
    <string name="map">Map</string>
    <string name="driver_arrived">The driver arrived to start point</string>
    <string name="driver_accept">The driver accepted the trip</string>
    <string name="no_trip">No trips</string>
    <string name="last_trip">Last trips</string>
    <string name="client_rate">Client Rate</string>
    <string name="support">Support</string>
    <string name="about">About Ovikl</string>
    <string name="not_active">Your account is not active, contact with support</string>
    <string name="complete_info">Complete your information</string>
    <string name="my_account">My account</string>
    <string name="trips_history">Trips history</string>
    <string name="logout">Logout</string>
    <string name="retry">Please retry again</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="attach">Attach image</string>
    <string name="trip_no">Trip#</string>
    <string name="time">Time</string>
    <string name="distance">Distance</string>
    <string name="duration">Duration</string>
    <string name="cost">Cost</string>
    <string name="state">State</string>
    <string name="PENDING">Waiting for driver acceptance</string>
    <string name="RESERVED">The driver accepted the trip</string>
    <string name="STARTED">The driver arrived to start point</string>
    <string name="FINISHED">The trip is finished</string>
    <string name="CANCELED">The trip is cancelled</string>
    <string name="sent">Sent message</string>
    <string name="received">Received message</string>
    <string name="update_google">Please update Google Play services</string>
    <string name="change_start_point">Change start point</string>
    <string name="confirm_start_point">Confirm start point</string>
    <string name="sure_logout">Do you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="driver_cancel_trip">The driver cancelled the trip</string>
    <string name="client_cancel_trip">The client cancelled the trip</string>
    <string name="driver_has_trip">The Driver has another trip</string>
    <string name="new_trip">You have new Trip</string>
    <string name="cost_is">The cost is</string>
    <string name="enter_name">Enter user name</string>
    <string name="call">Call </string>
    <string name="accept_trip">Accept trip</string>
    <string name="arrived_to_client">Arrived to client</string>
    <string name="finish_trip">Finish trip</string>
    <string name="cancel_trip">Cancel trip</string>
    <string name="chat_with_client">Chat with client</string>
    <string name="chat_with_driver">Chat with driver</string>
    <string name="call_the_client">Call the client</string>
    <string name="call_the_driver">Call the driver</string>
    <string name="call_to">Call</string>
    <string name="sure_cancel">Are you sure you want to cancel this trip?</string>
    <string name="sure_finish">Are you sure you want to finish this trip?</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="show_details">show details</string>
    <string name="hide_details">hide details</string>
    <string name="uploadingImage">Uploading image</string>
    <string name="rate">Rate</string>
    <string name="connecting">Connecting</string>
    <string name="search_driver">Searching for drivers in your zone</string>
    <string name="select_driver">Select a driver from the map</string>
    <string name="wait_requests">Please wait trip request</string>
    <string name="wait_upload">Please wait till upload the current photo</string>
    <string name="exit">Exit</string>
    <string name="sure_exit">Are you sure you want to close Ovikl?</string>
    <string name="uploading">Uploading</string>
    <string name="uploading_finished">Uploading finished</string>
    <string name="driver_register">Register as driver</string>
    <string name="by_cash">by cash</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="login">Sign in</string>
    <string name="resend_activation_email">Resend activation email</string>
    <string name="register">Register</string>
    <string name="forget_password">Forget password</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">Login failed</string>
    <string name="password">Password</string>
    <string name="password_hint">Password</string>
    <string name="password_err">Invalid password</string>
    <string name="first_name">First name</string>
    <string name="first_name_hint">First name</string>
    <string name="first_name_err">Invalid first name</string>
    <string name="last_name">Last name</string>
    <string name="last_name_hint">Last name</string>
    <string name="last_name_err">Invalid last name</string>
    <string name="reenter_password">Re-enter password</string>
    <string name="reenter_password_hint">Re-enter password</string>
    <string name="reenter_password_err">Invalid password</string>
    <string name="country">Country</string>
    <string name="mobile">Mobile</string>
    <string name="mobile_hint">Mobile like +447911123456</string>
    <string name="mobile_err">Invalid mobile</string>
    <string name="email">Email</string>
    <string name="email_hint">Email</string>
    <string name="email_err">Invalid email</string>
    <string name="currency">Currency</string>
    <string name="reset">Reset</string>
    <string name="fillAll">Please fill all below fields</string>
    <string name="vehicle">vehicle</string>
    <string name="cost_calculation">The Cost of trip is minimum cost or\nBase cost+(km cost*distance+minute cost*duration)</string>
    <string name="login_err2">Email or password is not correct</string>
    <string name="login_err">Email already registered</string>
    <string name="login_active_email">Please check your email to activate the account</string>
    <string name="carTypeHint">Type</string>
    <string name="carTypeErr">Invalid type</string>
    <string name="carModel">Model</string>
    <string name="carModelHint">Model like Corolla</string>
    <string name="carModelErr">Invalid model</string>
    <string name="carMadeYear">Made year</string>
    <string name="carMadeYearHint">Made year like 2019</string>
    <string name="carMadeYearErr">Invalid made year</string>
    <string name="carColorErr">Invalid color</string>
    <string name="carNumber">Plate number</string>
    <string name="carNumberHint">Plate number like NS1234</string>
    <string name="carNumberErr">Invalid plate number</string>
    <string name="user_blocked">The user is blocked</string>
    <string name="driver_license">Attach the driver license</string>
    <string name="car_license">Attach the vehicle license</string>
    <string name="id">Attach personal Id</string>
    <string name="id_error">Please attach personal Id</string>
    <string name="id_delete">delete personal Id</string>
    <string name="photo">Attach personal photo</string>
    <string name="car_front">Attach vehicle front</string>
    <string name="delete_car_front">Delete vehicle front</string>
    <string name="car_side">Attach vehicle side</string>
    <string name="delete_car_side">Delete vehicle side</string>
    <string name="car_back">Attach vehicle back</string>
    <string name="delete_car_back">Delete vehicle back</string>
    <string name="carManufacturer">Manufacturer</string>
    <string name="carManufacturerHint">Manufacturer like Toyota</string>
    <string name="carManufacturerErr">Invalid Manufacturer</string>
    <string name="save">Save</string>
    <string name="minimum">Minimum cost</string>
    <string name="minimumCostHint">Minimum Cost</string>
    <string name="minimumCostErr">Invalid minimum cost</string>
    <string name="baseCost">Base cost</string>
    <string name="baseCostHint">Base cost</string>
    <string name="baseCostErr">Invalid base cost</string>
    <string name="kmCost">km cost</string>
    <string name="kmCostHint">km cost</string>
    <string name="kmCostErr">invalid km cost</string>
    <string name="minuteCost">Minute cost</string>
    <string name="minuteCostHint">Minute cost</string>
    <string name="minuteCostErr">invalid minute cost</string>
    <string name="currency_hint">Currency</string>
    <string name="currency_err">Invalid currency</string>
    <string name="prices">Prices</string>
    <string name="car_info">Vehicle info</string>
    <string name="reset_password">Reset password</string>
    <string name="expected_trip_duration_and_distance">Trip estimation</string>
    <string name="my_info">My info</string>
    <string name="zone">Zone code</string>
    <string name="zone_hint">Zone code (optional)</string>
    <string name="zone_err">Invalid zone code</string>
    <string name="users">Zone users</string>
    <string name="trips">Zone trips</string>
    <string name="call_zone_support">Call zone support</string>
    <string name="search">Search</string>
    <string name="change_password">Change password</string>
    <string name="blocked_users">Zone blocked users</string>
</resources>