<?xml version="1.0" encoding="utf-8"?>
<com.caoutch.transnet.view.LoadingRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ovikl="http://ovikl.com"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RegisterPricesActivity"
    android:id="@+id/RegisterPricesActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="55dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cost_calculation"
                android:textAlignment="center"/>

            <com.caoutch.transnet.view.EditTextLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                ovikl:title="@string/minimum"
                ovikl:hint="@string/minimumCostHint"
                ovikl:error="@string/minimumCostErr"
                android:id="@+id/minimumCostET"
                ovikl:regexp="\\d+(\\.\\d+)?"
                android:layout_margin="5dp"
                ovikl:required="true"
                ovikl:inputType="decimal"
                />

            <com.caoutch.transnet.view.EditTextLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                ovikl:title="@string/baseCost"
                ovikl:hint="@string/baseCostHint"
                ovikl:error="@string/baseCostErr"
                android:id="@+id/baseCostET"
                ovikl:regexp="\\d+(\\.\\d+)?"
                android:layout_margin="5dp"
                ovikl:required="true"
                ovikl:inputType="decimal"
                />
            <com.caoutch.transnet.view.EditTextLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                ovikl:title="@string/kmCost"
                ovikl:hint="@string/kmCostHint"
                ovikl:error="@string/kmCostErr"
                android:id="@+id/kmCostET"
                ovikl:regexp="\\d+(\\.\\d+)?"
                android:layout_margin="5dp"
                ovikl:required="true"
                ovikl:inputType="decimal"
                />
            <com.caoutch.transnet.view.EditTextLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                ovikl:title="@string/minuteCost"
                ovikl:hint="@string/minuteCostHint"
                ovikl:error="@string/minuteCostErr"
                android:id="@+id/minuteCostET"
                ovikl:regexp="\\d+(\\.\\d+)?"
                android:layout_margin="5dp"
                ovikl:required="true"
                ovikl:inputType="decimal"
                />
            <com.caoutch.transnet.view.EditTextLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                ovikl:title="@string/currency"
                ovikl:hint="@string/currency_hint"
                ovikl:error="@string/currency_err"
                android:id="@+id/currencyCostET"
                ovikl:regexp=".{1,10}"
                android:layout_margin="5dp"
                ovikl:required="true"
                />
            <Button
                android:id="@+id/nextDriverBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:layout_gravity="center"
                android:minWidth="200dp"
                android:layout_margin="10dp"
                android:background="@null"
                android:textAllCaps="false"/>

        </LinearLayout>
    </ScrollView>


</com.caoutch.transnet.view.LoadingRelativeLayout>